[gd_scene load_steps=5 format=3 uid="uid://boq7gv5t3538s"]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_qsvqj"]
[ext_resource type="Theme" uid="uid://ct62jqjntkspo" path="res://assets/red_letter_theme.tres" id="2_hrlt0"]
[ext_resource type="AudioStream" uid="uid://cuyi2pix3iw0s" path="res://assets/sfx/typewriter_click.wav" id="3_lcm02"]
[ext_resource type="AudioStream" uid="uid://b5h7sdfbrc0va" path="res://assets/sfx/bong.wav" id="4_uciw5"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_qsvqj")

[node name="GameOverHeading" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Game Over"

[node name="StatusHeading" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 75.0
offset_right = 79.0
offset_bottom = 142.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Status:"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.5
offset_top = 15.0
offset_right = 226.5
offset_bottom = 114.0
grow_horizontal = 2
theme = ExtResource("2_hrlt0")
text = "
"

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -17.0
offset_right = 66.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Score: 1500
"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Play Again"

[node name="ExitGame" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 218.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Exit Game"

[node name="DeathDescription" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -68.0
offset_right = 112.5
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="TypewriterClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lcm02")

[node name="BongSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_uciw5")
volume_db = 12.0

[connection signal="pressed" from="Control/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Control/ExitGame" to="." method="_on_exit_game_pressed"]
